Fixed header and overflow scroll on articles-wrapper

--- a/client/styles.css
+++ b/client/styles.css
@@ -2,22 +2,30 @@
 html {
   margin: 0;
   padding: 0;
+  height: 100vh;
 }
 
 body {
+  box-sizing: border-box;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
   font-family: 'Fantasque Sans Mono';
   font-size: 15px;
-  margin: 1em 2em 2em 2em;
+  margin: 0;
+  padding: 0;
+  overflow-y: hidden;
 }
 
 header {
-  font-family: 'gulax';
-  display: flex;
-  justify-content: center;
+  margin: 1em 2em 1em 2em;
+  text-align: center;
 }
 
 header h1 {
   font-size: 80px;
+  font-family: 'gulax';
   margin: 0.25em;
   color: #000;
   text-align: center;
@@ -26,9 +34,9 @@ header h1 {
 }
 
 .infobar {
+  position: relative;
   display: flex;
   justify-content: space-between;
-  margin: 1em 0 1em 0;
   border-top: solid 4px black;
   border-bottom: solid 4px black;
 }
@@ -57,12 +65,17 @@ header h1 {
 
 .articles-wrapper {
   margin-top: 2em;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1em;
+}
+
+#content {
+  margin: 2em;
+  overflow-y: scroll;
 }
 
 .article-wrapper {
-  margin: 1em 1em 0 0;
   padding: 0.5em;
   display: flex;
   flex-direction: column;
@@ -71,25 +84,30 @@ header h1 {
   border: solid black 4px;
 }
 
-.article-wrapper .title {
+.article-wrapper.story {
+  grid-column-end: 1 / 2;
+  grid-row-end: 1 / 2;
+}
+
+.article-wrapper > .title {
   font-size: 1.7em;
   font-weight: bold;
 }
 
-.article-wrapper.authname, .article-wrapper.authinfo {
+.article-wrapper > .authname, .article-wrapper > .authinfo {
   font-size: 0.8em;
   font-style: italic;
   color: #555;
 }
 
-.article-wrapper .createdAt {
+.article-wrapper > .createdAt {
   font-size: 0.8em;
   color: red;
 }
 
 .button-wrapper {
   position: fixed;
-  right: 0;
+  right: 6px;
   bottom: 0;
   z-index: 1;
 
